Fix #634: asb: font color of selected result too dark

--- a/src/less/colors-autosuggestbox.less
+++ b/src/less/colors-autosuggestbox.less
@@ -31,18 +31,19 @@
             border-color:rgb(42, 42, 42);
             background-color:rgb(255, 255, 255);
         }
-        
-        .win-autosuggestbox-flyout-highlighttext {
-            color: rgb(70, 23, 180);
-        }
-
-        .win-autosuggestbox-suggestion-selected {
-            background-color: rgb(70, 23, 180);
-        }
 
         .win-autosuggestbox-suggestion-query,
         .win-autosuggestbox-suggestion-result {
             color: rgb(0, 0, 0);
+        }
+
+        .win-autosuggestbox-suggestion-selected {
+            background-color: rgb(70, 23, 180);
+            color: rgb(255, 255, 255);
+        }
+
+        .win-autosuggestbox-flyout-highlighttext {
+            color: rgb(70, 23, 180);
         }
 
         .win-autosuggestbox-suggestion-separator {
@@ -88,18 +89,19 @@
             border-color:rgb(42, 42, 42);
             background-color:rgb(255, 255, 255);
         }
-        
-        .win-autosuggestbox-flyout-highlighttext {
-            color: rgb(70, 23, 180);
-        }
-
-        .win-autosuggestbox-suggestion-selected {
-            background-color: rgb(70, 23, 180);
-        }
 
         .win-autosuggestbox-suggestion-query,
         .win-autosuggestbox-suggestion-result {
             color: rgb(0,0,0);
+        }
+
+        .win-autosuggestbox-suggestion-selected {
+            background-color: rgb(70, 23, 180);
+            color: rgb(255, 255, 255);
+        }
+
+        .win-autosuggestbox-flyout-highlighttext {
+            color: rgb(70, 23, 180);
         }
 
         .win-autosuggestbox-suggestion-separator {
